Set session data table layout property to fixed to keep text from spilling over

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -144,6 +144,10 @@
 	}
 }
 
+.session_table {
+  table-layout: fixed;
+}
+
 .new_form, .edit_form, .search_form {
 	fieldset {
 		legend {
